external-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:ACCOUNT:certificate/xxxx-xxxxx-xxxx-xxx
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-xxxx,subnet-xxx,subnet-xxxx
    alb.ingress.kubernetes.io/security-groups: sg-xxxx
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=xxxx-alb-access-logs,access_logs.s3.prefix=external-ingress
    alb.ingress.kubernetes.io/actions.redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  name: external-services-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
              serviceName: redirect
              servicePort: use-annotation
  - host: productpage.k8sdemo.powerupcloud.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: productpage
          servicePort: 443
